# detector-yaml

./: .gitignore  ATLAS.hs  ATLAS2011.yaml  LICENSE  README.md  YAML.hs  detector-yaml.cabal  test.yaml  test2.yaml  yamltest.hs  yayaml.hs
csrc/: testffi.c  testffi.cpp  testffi.h
csrc/detector/: parse.cpp  parse.h  parser.cpp  parser.h  type.h
exe/: mkyaml.hs  parsecpp.hs  parseyaml.hs  tester.hs
lib/: ATLAS.hs  CMS.hs  Detector.hs  Parser.hs  Test.hsc
lib/Detector/: Parser.hs  Type.hs
lib/Detector/Type/: Common.hs  Efficiency.hs  Identification.hs  PTEtaData.hs  Range.hs  Smearing.hs
lib/YAML/: Builder.hs  Parser.hs
src/: ATLAS.hs  CMS.hs  Detector.hs  YAML.hs  yamltest.hs
trash/YAML/: Parser.hs
