Name:		detector-yaml
Version:	0.0
Synopsis:	
Description: 	
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
Extra-source-files: csrc/testffi.h
                    csrc/testffi.cpp

Executable mkyaml
  Main-is: mkyaml.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, 
                   text,  
                   filepath,
                   detector-yaml

Executable parseyaml
  Main-is: parseyaml.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, 
                   text, 
                   attoparsec,
                   detector-yaml

Executable parsecpp
  Main-is: parsecpp.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, 
                   text, 
                   attoparsec,
                   detector-yaml

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -Werror -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  cc-options: -std=c++11
  Build-Depends: 
                   base>4, 
                   text, 
                   scientific, 
                   bytestring, 
                   attoparsec,
                   filepath

  Exposed-Modules: 
                   ATLAS
                   CMS
                   Detector.Parser
                   Detector.Type
                   YAML.Builder
                   YAML.Parser
                   Test

  include-dirs:      csrc
  C-sources:         csrc/testffi.cpp

  install-includes:  testffi.h

  extra-libraries:   stdc++, yaml-cpp
  -- yaml-cpp
  pkgconfig-depends: yaml-cpp
