Name:		detector-yaml
Version:	0.0.999
Synopsis:	YAML description handler for collider detectors
Description: 	YAML description handler for collider detectors
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
Extra-source-files:

Executable tester
  Main-is: tester.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   attoparsec,
                   base>4, 
                   directory,
                   filepath,
                   text,  
                   unordered-containers,
                   yayaml,
                   detector-yaml



Executable mkyaml
  Main-is: mkyaml.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, 
                   directory,
                   filepath,
                   text,  
                   yayaml,
                   detector-yaml

Executable parseyaml
  Main-is: parseyaml.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   attoparsec,
                   base>4, 
                   directory,
                   filepath,
                   text, 
                   transformers,
                   yayaml,
                   detector-yaml

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -Werror -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  cc-options: -std=c++11
  Build-Depends: 
                   attoparsec,
                   base>4, 
                   bytestring, 
                   filepath,
                   scientific, 
                   text, 
                   transformers,
                   unordered-containers,
                   yayaml

  Exposed-Modules: 
                   ATLAS
                   CMS
                   Detector.Parser
                   Detector.Type
                   Detector.Type.Common
                   Detector.Type.Identification
                   Detector.Type.PTEtaData
                   Detector.Type.Smearing
  include-dirs:      
  C-sources:         
  install-includes:  
  extra-libraries:  
  pkgconfig-depends: